# MultiNanopolish

./: CMakeLists.txt  Makefile  README.md
hdf5-1.8.14/: Makefile  config.lt  config.status  libtool
hdf5-1.8.14/c++/: Makefile
hdf5-1.8.14/c++/examples/: Makefile  testh5c++.sh
hdf5-1.8.14/c++/src/: Makefile  h5c++
hdf5-1.8.14/c++/test/: Makefile
hdf5-1.8.14/examples/: Makefile  testh5cc.sh
hdf5-1.8.14/fortran/: Makefile
hdf5-1.8.14/fortran/examples/: Makefile  testh5fc.sh
hdf5-1.8.14/fortran/src/: Makefile  h5fc
hdf5-1.8.14/fortran/test/: Makefile
hdf5-1.8.14/fortran/testpar/: Makefile
hdf5-1.8.14/hl/: Makefile
hdf5-1.8.14/hl/c++/: Makefile
hdf5-1.8.14/hl/c++/examples/: Makefile
hdf5-1.8.14/hl/c++/src/: Makefile
hdf5-1.8.14/hl/c++/test/: Makefile
hdf5-1.8.14/hl/examples/: Makefile
hdf5-1.8.14/hl/fortran/: Makefile
hdf5-1.8.14/hl/fortran/examples/: Makefile
hdf5-1.8.14/hl/fortran/src/: Makefile
hdf5-1.8.14/hl/fortran/test/: Makefile
hdf5-1.8.14/hl/src/: Makefile  libhdf5_hl.la
hdf5-1.8.14/hl/src/.deps/: H5DO.Plo  H5DS.Plo  H5IM.Plo  H5LT.Plo  H5LTanalyze.Plo  H5LTparse.Plo  H5PT.Plo  H5TB.Plo
hdf5-1.8.14/hl/src/.libs/: libhdf5_hl.lai  libhdf5_hl.so.9
hdf5-1.8.14/hl/test/: Makefile  test_ds  test_dset_opt  test_file_image  test_image  test_lite  test_packet  test_table
hdf5-1.8.14/hl/test/.deps/: test_ds.Po  test_dset_opt.Po  test_file_image.Po  test_image.Po  test_lite.Po  test_packet.Po  test_table.Po
hdf5-1.8.14/hl/test/.libs/: test_ds  test_dset_opt  test_file_image  test_image  test_lite  test_packet  test_table
hdf5-1.8.14/hl/tools/: Makefile
hdf5-1.8.14/hl/tools/gif2h5/: Makefile  gif2h5  h52gif  h52gifgentst
hdf5-1.8.14/perform/: Makefile  chunk  h5perf_serial  iopipe  overhead  perf  perf_meta  zip_perf
hdf5-1.8.14/perform/.deps/: chunk.Po  iopipe.Po  overhead.Po  perf.Po  perf_meta.Po  sio_engine.Po  sio_perf.Po  sio_timer.Po  zip_perf.Po
hdf5-1.8.14/perform/.libs/: chunk  iopipe  overhead  perf  perf_meta  zip_perf
hdf5-1.8.14/src/: H5Tinit.c  H5config.h  H5detect  H5lib_settings.c  H5make_libsettings  H5pubconf.h  Makefile  libhdf5.la
hdf5-1.8.14/src/.deps/: H5.Plo  H5A.Plo  H5AC.Plo  H5Abtree2.Plo  H5Adense.Plo  H5Adeprec.Plo  H5Aint.Plo  H5Atest.Plo  H5B.Plo  H5B2.Plo  H5B2cache.Plo  H5B2dbg.Plo  H5B2hdr.Plo  H5B2int.Plo  H5B2stat.Plo  H5B2test.Plo  H5Bcache.Plo  H5Bdbg.Plo  H5C.Plo  H5CS.Plo  H5D.Plo  H5Dbtree.Plo  H5Dchunk.Plo  H5Dcompact.Plo  H5Dcontig.Plo  H5Ddbg.Plo  H5Ddeprec.Plo  H5Defl.Plo  H5Dfill.Plo  H5Dint.Plo  H5Dio.Plo  H5Dlayout.Plo  H5Dmpio.Plo  H5Doh.Plo  H5Dscatgath.Plo  H5Dselect.Plo  H5Dtest.Plo  H5E.Plo  H5Edeprec.Plo  H5Eint.Plo  (+201 more)
hdf5-1.8.14/src/.libs/: libhdf5.so.9
hdf5-1.8.14/test/: Makefile  accum  app_ref  big  bittests  btree2  cache  cache_api  cmpd_dset  cross_read  dangle  dsets  dt_arith  dtransform  dtypes  efc  enum  err_compat  error_test  extend  external  fheap  file_image  fillval  filter_fail  flush1  flush2  freespace  getname  gheap  hyperslab  istore  lheap  libdynlib1.la  libdynlib2.la  links  links_env  mf  mount  mtime  (+15 more)
hdf5-1.8.14/test/.deps/: accum.Po  app_ref.Po  big.Po  bittests.Po  btree2.Po  cache.Po  cache_api.Po  cache_common.Plo  cmpd_dset.Po  cross_read.Po  dangle.Po  dsets.Po  dt_arith.Po  dtransform.Po  dtypes.Po  dynlib1.Plo  dynlib2.Plo  dynlib3.Plo  efc.Po  enum.Po  err_compat.Po  error_test.Po  extend.Po  external.Po  fheap.Po  file_image.Po  fillval.Po  filter_fail.Po  flush1.Po  flush2.Po  freespace.Po  getname.Po  gheap.Po  h5test.Plo  hyperslab.Po  istore.Po  lheap.Po  links.Po  links_env.Po  mf.Po  (+46 more)
hdf5-1.8.14/test/.libs/: accum  app_ref  big  bittests  btree2  cache  cache_api  cmpd_dset  cross_read  dangle  dsets  dt_arith  dtransform  dtypes  efc  enum  err_compat  error_test  extend  external  fheap  file_image  fillval  filter_fail  flush1  flush2  freespace  getname  gheap  hyperslab  istore  lheap  libdynlib1.lai  libdynlib1.so.0.0.0  libdynlib2.lai  libdynlib2.so.0.0.0  libdynlib3.la  libdynlib3.lai  libdynlib3.so.0.0.0  libh5test.la  (+20 more)
hdf5-1.8.14/testpar/: Makefile
hdf5-1.8.14/tools/: Makefile
hdf5-1.8.14/tools/h5copy/: Makefile  h5copy  h5copygentest
hdf5-1.8.14/tools/h5copy/.deps/: h5copy.Po  h5copygentest.Po
hdf5-1.8.14/tools/h5copy/.libs/: h5copy  h5copygentest
hdf5-1.8.14/tools/h5diff/: Makefile  h5diff  h5diffgentest
hdf5-1.8.14/tools/h5diff/.deps/: h5diff_common.Po  h5diff_main.Po  h5diffgentest.Po
hdf5-1.8.14/tools/h5diff/.libs/: h5diff  h5diffgentest
hdf5-1.8.14/tools/h5dump/: Makefile  binread  h5dump  h5dumpgentest
hdf5-1.8.14/tools/h5dump/.deps/: binread.Po  h5dump.Po  h5dump_ddl.Po  h5dump_xml.Po  h5dumpgentest.Po
hdf5-1.8.14/tools/h5dump/.libs/: binread  h5dump  h5dumpgentest
hdf5-1.8.14/tools/h5import/: Makefile  h5import  h5importtest
hdf5-1.8.14/tools/h5import/.deps/: h5import.Po  h5importtest.Po
hdf5-1.8.14/tools/h5import/.libs/: h5importtest
hdf5-1.8.14/tools/h5jam/: Makefile  getub  h5jam  h5jamgentest  h5unjam  tellub
hdf5-1.8.14/tools/h5jam/.deps/: getub.Po  h5jam.Po  h5jamgentest.Po  h5unjam.Po  tellub.Po
hdf5-1.8.14/tools/h5jam/.libs/: getub  h5jamgentest  tellub
hdf5-1.8.14/tools/h5ls/: Makefile  h5ls
hdf5-1.8.14/tools/h5ls/.deps/: h5ls.Po
hdf5-1.8.14/tools/h5repack/: Makefile  h5repack  h5repacktst  libdynlibadd.la  testh5repack_detect_szip
hdf5-1.8.14/tools/h5stat/: Makefile  h5stat  h5stat_gentest
hdf5-1.8.14/tools/lib/: Makefile
hdf5-1.8.14/tools/misc/: Makefile  h5debug  h5mkgrp  h5repart  h5repart_gentest  repart_test  talign
lib/: libhdf5.la  libhdf5.settings  libhdf5_hl.so.9.0.0
src/: nanopolish_call_variants.cpp  nanopolish_haplotype.cpp  nanopolish_haplotype.h  nanopolish_variant_db.cpp  nanopolish_variant_db.h
src/alignment/: nanopolish_alignment_db.cpp
src/common/: nanopolish_variant.cpp  nanopolish_variant.h
src/group_model/: GroupTask.cpp  GroupTask.h  GroupsProcessor.cpp  GroupsProcessor.h
src/hmm/: nanopolish_profile_hmm_r9.inl
src/main/: nanopolish.cpp
src/pore_model/: nanopolish_poremodel.h
test/: performance.eps
(+56 files in other folders)
